# bijective

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: implementation.rs  lib.rs  tests.rs  validation.rs  visitor.rs
tests/: compile_tests.rs
tests/compile/: biject_bijection.rs  inject_bijection.rs  inject_strict.rs  non_biject_not_injective.rs  non_biject_not_injective.stderr  non_biject_not_surjective.rs  non_biject_not_surjective.stderr  non_inject_many_to_one.rs  non_inject_many_to_one.stderr  non_surjective_missing_output.rs  non_surjective_missing_output.stderr  surjective_bijection.rs  surjective_many_to_one.rs
