[package]
name = "bijective"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
