[package]
name = "bijective"
version = "0.1.0"
edition = "2024"
description = "Compile-time enforcement of surjective, injective, and bijective properties on enum-to-enum match expressions"
license = "MIT"
documentation = "https://docs.rs/bijective"
homepage = "https://github.com/sodagunz/bijective"
repository = "https://github.com/sodagunz/bijective"
keywords = ["bijective", "enum", "proc-macro", "surjective", "injective"]
categories = ["development-tools", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
